# rust-ml-benchmark

./: .gitignore  LICENSE  PLAN.md  README.md  requirements.txt  run_benchmarks.sh
docker/: python.Dockerfile  rust.Dockerfile
experiments/python/: classical_ml.py  deep_learning.py
old/: run_enhanced_benchmarks.sh  test_python_output.txt
old/results/: benchmark_report_iris_20250727_174311.md  benchmark_report_iris_20250727_190724.md  benchmark_report_iris_20250727_190910.md  benchmark_report_iris_20250727_191813.md  benchmark_table.md  enhanced_benchmark_data.csv  enhanced_sklearn_iris_results.txt  enhanced_smartcore_20250727_162442.txt  iris_comparison_summary.md  iris_linfa_results.txt  iris_sklearn_results.txt  iris_smartcore_results.txt  linfa_results.txt  organized_benchmark_table.md  smartcore_results.txt
old/results/enhanced_analysis_improved/: enhanced_benchmark_report.md
old/scripts/: benchmark_runner.py  sklearn_runner.py
old/scripts/smartcore_bencher/: test_smartcore_iris.txt
results/: benchmark_report_iris_20250727_185539.md  benchmark_report_iris_20250727_185856.md  benchmark_summary.md  benchmark_table.md  benchmark_table.tex  enhanced_benchmark_report.md  enhanced_linfa_20250727_162427.txt  enhanced_linfa_20250727_162442.txt  enhanced_sklearn_20250727_162157.txt  enhanced_sklearn_20250727_162442.txt  enhanced_sklearn_comprehensive.txt  enhanced_smartcore_20250727_162427.txt  iris_benchmark_analysis.txt  linfa_results.txt  python_kmeans_results.json  python_linear_regression_results.json  python_svm_results.json  sklearn_results.txt  sklearn_results_test.txt  smartcore_results.txt
results/comprehensive_comparison/: comprehensive_benchmark_data.csv  comprehensive_benchmark_report.md
results/enhanced_analysis_improved/: enhanced_benchmark_data.csv
scripts/: Cargo.toml  enhanced_iris_smartcore_results.txt  enhanced_iris_test_results.txt  report_generator.py  sklearn_bencher.py
scripts/linfa_bencher/: Cargo.toml  enhanced_iris_linfa_results.txt
scripts/linfa_bencher/benches/: ml_benchmarks.rs
scripts/linfa_bencher/src/: benchmark_core.rs  enhanced_iris_wrapper.rs  iris.rs  main.rs
scripts/smartcore_bencher/: Cargo.toml
scripts/smartcore_bencher/benches/: ml_benchmarks.rs
scripts/smartcore_bencher/src/: enhanced_iris_wrapper.rs  main.rs
(+4 files in other folders)
