[package]
name = "linfa_bencher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Linfa ML Framework
linfa = "0.7.0"
linfa-svm = "0.7.0"
linfa-trees = "0.7.0"
linfa-datasets = "0.7.0"

# Data Handling & Numerics
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"

# CLI & Utilities
clap = { version = "4.5.4", features = ["derive"] }
psutil = "3"

serde_json = "1.0"
