[package]
name = "linfa_bencher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linfa_bencher"
path = "src/main.rs"

[[bin]]
name = "iris_bencher"
path = "src/iris.rs"

[dependencies]
# Linfa ML Framework
linfa = "0.7.0"
linfa-svm = "0.7.0"
linfa-trees = "0.7.0"
linfa-datasets = "0.7.0"
linfa-preprocessing = "0.7.0"

# Data Handling & Numerics
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"

# CLI & Utilities
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0"

# Professional resource monitoring
sysinfo = "0.30"
psutil = "3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ml_benchmarks"
harness = false
