[package]
name = "smartcore_bencher"
version = "0.1.0"
edition = "2021"

[dependencies]
# SmartCore ML Framework - remove the incorrect feature flag
smartcore = "0.4.0"

# Add nalgebra as a direct dependency
nalgebra = "0.32"

# Data Handling & CLI
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
psutil = "3"

serde_json = "1.0"
