[package]
name = "smartcore_bencher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smartcore_bencher"
path = "src/main.rs"

[[bin]]
name = "iris_bencher"
path = "src/iris.rs"

[dependencies]
# SmartCore ML Framework
smartcore = "0.4.0"
nalgebra = "0.32"

# Data Handling & CLI
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0"

# Professional resource monitoring
sysinfo = "0.30"
psutil = "3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ml_benchmarks"
harness = false
